--- a/notebooks/ensemble+analisi.ipynb
+++ b/notebooks/ensemble+analisi.ipynb
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
        "2792            22.998497    45256.0      1   38284.0        33110.0  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2423,16 +2423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "altro = pd.read_csv(\"../preds.csv\")"
+    "altro = pd.read_csv(\"../preds_683.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2441,7 +2441,7 @@
        "7.932035358274351"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2461,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2470,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2479,7 +2479,7 @@
        "20.94348443526705"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2499,7 @@
        "6.907436483592895"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2513,11 +2513,415 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add CatBoost"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cat_no_cl = pd.read_csv('../dataset/prediction/test/catboost_nocluster_test.csv')\n",
+    "cat_cl = pd.read_csv('../dataset/prediction/test/catboost_cluster_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>sku</th>\n",
+       "      <th>target</th>\n",
+       "      <th>real_target</th>\n",
+       "      <th>log_prediction_catboost_nocluster</th>\n",
+       "      <th>prediction_catboost_nocluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>144</td>\n",
+       "      <td>9.694555</td>\n",
+       "      <td>16228.0</td>\n",
+       "      <td>9.663799</td>\n",
+       "      <td>15736.457074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>546</td>\n",
+       "      <td>11.025295</td>\n",
+       "      <td>61407.0</td>\n",
+       "      <td>11.095282</td>\n",
+       "      <td>65858.728453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>549</td>\n",
+       "      <td>10.427565</td>\n",
+       "      <td>33777.0</td>\n",
+       "      <td>10.744748</td>\n",
+       "      <td>46384.790607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>554</td>\n",
+       "      <td>11.717286</td>\n",
+       "      <td>122673.0</td>\n",
+       "      <td>11.998671</td>\n",
+       "      <td>162537.689365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>686</td>\n",
+       "      <td>9.960718</td>\n",
+       "      <td>21177.0</td>\n",
+       "      <td>9.734891</td>\n",
+       "      <td>16896.000783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>2019-12-14</td>\n",
+       "      <td>1035</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.691151</td>\n",
+       "      <td>43964.078001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>2019-12-14</td>\n",
+       "      <td>1051</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.398832</td>\n",
+       "      <td>12073.274916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>2019-12-14</td>\n",
+       "      <td>1058</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.233917</td>\n",
+       "      <td>27830.300652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>2019-12-14</td>\n",
+       "      <td>1065</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.255167</td>\n",
+       "      <td>77277.159579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>2019-12-14</td>\n",
+       "      <td>1206</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.607260</td>\n",
+       "      <td>40426.283562</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date   sku     target  real_target  \\\n",
+       "0    2019-06-29   144   9.694555      16228.0   \n",
+       "1    2019-06-29   546  11.025295      61407.0   \n",
+       "2    2019-06-29   549  10.427565      33777.0   \n",
+       "3    2019-06-29   554  11.717286     122673.0   \n",
+       "4    2019-06-29   686   9.960718      21177.0   \n",
+       "..          ...   ...        ...          ...   \n",
+       "295  2019-12-14  1035        NaN          NaN   \n",
+       "296  2019-12-14  1051        NaN          NaN   \n",
+       "297  2019-12-14  1058        NaN          NaN   \n",
+       "298  2019-12-14  1065        NaN          NaN   \n",
+       "299  2019-12-14  1206        NaN          NaN   \n",
+       "\n",
+       "     log_prediction_catboost_nocluster  prediction_catboost_nocluster  \n",
+       "0                             9.663799                   15736.457074  \n",
+       "1                            11.095282                   65858.728453  \n",
+       "2                            10.744748                   46384.790607  \n",
+       "3                            11.998671                  162537.689365  \n",
+       "4                             9.734891                   16896.000783  \n",
+       "..                                 ...                            ...  \n",
+       "295                          10.691151                   43964.078001  \n",
+       "296                           9.398832                   12073.274916  \n",
+       "297                          10.233917                   27830.300652  \n",
+       "298                          11.255167                   77277.159579  \n",
+       "299                          10.607260                   40426.283562  \n",
+       "\n",
+       "[300 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_no_cl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>sku</th>\n",
+       "      <th>target</th>\n",
+       "      <th>real_target</th>\n",
+       "      <th>log_prediction_lgb_no_cluster</th>\n",
+       "      <th>prediction_lgb_no_cluster</th>\n",
+       "      <th>ensemble_pre_log</th>\n",
+       "      <th>ensemble_pre_normal</th>\n",
+       "      <th>perc_error</th>\n",
+       "      <th>abs_perc_error</th>\n",
+       "      <th>pred_linear_regression</th>\n",
+       "      <th>ensemble_normal_lr</th>\n",
+       "      <th>log_prediction_catboost_nocluster</th>\n",
+       "      <th>prediction_catboost_nocluster</th>\n",
+       "      <th>log_prediction_catboost_cluster</th>\n",
+       "      <th>prediction_catboost_cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>144</td>\n",
+       "      <td>9.694555</td>\n",
+       "      <td>16228.0</td>\n",
+       "      <td>9.651065</td>\n",
+       "      <td>15537.326992</td>\n",
+       "      <td>14642.821553</td>\n",
+       "      <td>14674.154752</td>\n",
+       "      <td>9.768169</td>\n",
+       "      <td>9.768169</td>\n",
+       "      <td>38592.924306</td>\n",
+       "      <td>16533.360916</td>\n",
+       "      <td>9.663799</td>\n",
+       "      <td>15736.457074</td>\n",
+       "      <td>9.716272</td>\n",
+       "      <td>16584.292533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>546</td>\n",
+       "      <td>11.025295</td>\n",
+       "      <td>61407.0</td>\n",
+       "      <td>11.144993</td>\n",
+       "      <td>69215.377494</td>\n",
+       "      <td>65225.888277</td>\n",
+       "      <td>65365.803966</td>\n",
+       "      <td>-6.218979</td>\n",
+       "      <td>6.218979</td>\n",
+       "      <td>65464.221979</td>\n",
+       "      <td>64067.345508</td>\n",
+       "      <td>11.095282</td>\n",
+       "      <td>65858.728453</td>\n",
+       "      <td>11.096381</td>\n",
+       "      <td>65931.107106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>549</td>\n",
+       "      <td>10.427565</td>\n",
+       "      <td>33777.0</td>\n",
+       "      <td>10.584590</td>\n",
+       "      <td>39520.086357</td>\n",
+       "      <td>39863.876775</td>\n",
+       "      <td>39865.705541</td>\n",
+       "      <td>-18.020774</td>\n",
+       "      <td>18.020774</td>\n",
+       "      <td>37277.180659</td>\n",
+       "      <td>38835.424191</td>\n",
+       "      <td>10.744748</td>\n",
+       "      <td>46384.790607</td>\n",
+       "      <td>10.634156</td>\n",
+       "      <td>41528.382799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>554</td>\n",
+       "      <td>11.717286</td>\n",
+       "      <td>122673.0</td>\n",
+       "      <td>11.791167</td>\n",
+       "      <td>132079.522759</td>\n",
+       "      <td>132939.473371</td>\n",
+       "      <td>132942.896613</td>\n",
+       "      <td>-8.368976</td>\n",
+       "      <td>8.368976</td>\n",
+       "      <td>140701.251675</td>\n",
+       "      <td>130982.290636</td>\n",
+       "      <td>11.998671</td>\n",
+       "      <td>162537.689365</td>\n",
+       "      <td>11.818203</td>\n",
+       "      <td>135699.167421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>686</td>\n",
+       "      <td>9.960718</td>\n",
+       "      <td>21177.0</td>\n",
+       "      <td>9.776227</td>\n",
+       "      <td>17609.086558</td>\n",
+       "      <td>16828.934102</td>\n",
+       "      <td>16849.985339</td>\n",
+       "      <td>20.532020</td>\n",
+       "      <td>20.532020</td>\n",
+       "      <td>47368.718446</td>\n",
+       "      <td>19259.671612</td>\n",
+       "      <td>9.734891</td>\n",
+       "      <td>16896.000783</td>\n",
+       "      <td>9.833466</td>\n",
+       "      <td>18646.468906</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  sku     target  real_target  log_prediction_lgb_no_cluster  \\\n",
+       "0  2019-06-29  144   9.694555      16228.0                       9.651065   \n",
+       "1  2019-06-29  546  11.025295      61407.0                      11.144993   \n",
+       "2  2019-06-29  549  10.427565      33777.0                      10.584590   \n",
+       "3  2019-06-29  554  11.717286     122673.0                      11.791167   \n",
+       "4  2019-06-29  686   9.960718      21177.0                       9.776227   \n",
+       "\n",
+       "   prediction_lgb_no_cluster  ensemble_pre_log  ensemble_pre_normal  \\\n",
+       "0               15537.326992      14642.821553         14674.154752   \n",
+       "1               69215.377494      65225.888277         65365.803966   \n",
+       "2               39520.086357      39863.876775         39865.705541   \n",
+       "3              132079.522759     132939.473371        132942.896613   \n",
+       "4               17609.086558      16828.934102         16849.985339   \n",
+       "\n",
+       "   perc_error  abs_perc_error  pred_linear_regression  ensemble_normal_lr  \\\n",
+       "0    9.768169        9.768169            38592.924306        16533.360916   \n",
+       "1   -6.218979        6.218979            65464.221979        64067.345508   \n",
+       "2  -18.020774       18.020774            37277.180659        38835.424191   \n",
+       "3   -8.368976        8.368976           140701.251675       130982.290636   \n",
+       "4   20.532020       20.532020            47368.718446        19259.671612   \n",
+       "\n",
+       "   log_prediction_catboost_nocluster  prediction_catboost_nocluster  \\\n",
+       "0                           9.663799                   15736.457074   \n",
+       "1                          11.095282                   65858.728453   \n",
+       "2                          10.744748                   46384.790607   \n",
+       "3                          11.998671                  162537.689365   \n",
+       "4                           9.734891                   16896.000783   \n",
+       "\n",
+       "   log_prediction_catboost_cluster  prediction_catboost_cluster  \n",
+       "0                         9.716272                 16584.292533  \n",
+       "1                        11.096381                 65931.107106  \n",
+       "2                        10.634156                 41528.382799  \n",
+       "3                        11.818203                135699.167421  \n",
+       "4                         9.833466                 18646.468906  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ens_cat = pd.merge(df_ens, cat_no_cl, how='left')\n",
+    "df_ens_cat = pd.merge(df_ens_cat, cat_cl, how='left')\n",
+    "\n",
+    "df_ens_cat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.837284189641495"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = .9\n",
+    "b = .1\n",
+    "df_ens_cat['ensemble_with_cat'] = a*df_ens_cat.ensemble_normal_lr+b*df_ens_cat.prediction_catboost_nocluster\n",
+    "MAPE(df_ens_cat.dropna().real_target, df_ens_cat.dropna().ensemble_with_cat)"
+   ]
   }
  ],
  "metadata": {
