analysis_flow updated

--- a/consegna/analysis_flow.ipynb
+++ b/consegna/analysis_flow.ipynb
@@ -1,105 +1,408 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<style>\n",
+       "p { font-size: 20px }\n",
+       "l { font-size: 20px }\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "with open('md_config.md', 'r') as fh:\n",
+    "    content = fh.read()\n",
+    "\n",
+    "display(Markdown(content))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Mining Challenge 2020\n",
+    "# <b>Data Mining Challenge 2020</b>\n",
     "\n",
-    "## Team\n",
+    "## <b>Team</b>\n",
     "* Tommaso Fioravanti - 105xxxxx(Student-ID)\n",
     "* Matteo Moreschini - 105xxxxx(Student-ID)\n",
     "* Alessio Introito Russo - 105xxxxx(Student-ID)\n",
-    "* Davide Salaorni - 10526800\n"
+    "* Davide Salaorni - 10526800\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Introduction\n",
-    "Questo progetto serve a..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Data Analysis"
+    "# <b>1. Introduction</b>\n",
+    "The project is based on sales forecasting. Indeed, we have been provided with aggregated weekly-recorded information for different products (_SKU_) throughout a 3  years time window, from December 2016 to December 2019. We are asked to forecast the weekly sales regarding 12 of the 43 products in the dataset. <br>\n",
+    "The metric that we are going to use to estimate the goodness of our predictions is the Mean Average Percentage Error (_MAPE_).\n",
+    "\n",
+    "Here a quick glance to the dataset and to the time series:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>sku</th>\n",
+       "      <th>pack</th>\n",
+       "      <th>size (GM)</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>price</th>\n",
+       "      <th>POS_exposed w-1</th>\n",
+       "      <th>volume_on_promo w-1</th>\n",
+       "      <th>sales w-1</th>\n",
+       "      <th>scope</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-12-10</td>\n",
+       "      <td>2689</td>\n",
+       "      <td>SINGLE</td>\n",
+       "      <td>395.41</td>\n",
+       "      <td>BRAND1</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24175.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-12-17</td>\n",
+       "      <td>2689</td>\n",
+       "      <td>SINGLE</td>\n",
+       "      <td>395.41</td>\n",
+       "      <td>BRAND1</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.676112</td>\n",
+       "      <td>24175.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23521.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-12-24</td>\n",
+       "      <td>2689</td>\n",
+       "      <td>SINGLE</td>\n",
+       "      <td>395.41</td>\n",
+       "      <td>BRAND1</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.482803</td>\n",
+       "      <td>23521.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22075.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>2689</td>\n",
+       "      <td>SINGLE</td>\n",
+       "      <td>395.41</td>\n",
+       "      <td>BRAND1</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.410646</td>\n",
+       "      <td>22075.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16492.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-07</td>\n",
+       "      <td>2689</td>\n",
+       "      <td>SINGLE</td>\n",
+       "      <td>395.41</td>\n",
+       "      <td>BRAND1</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>29.812030</td>\n",
+       "      <td>16492.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25971.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date   sku    pack  size (GM)   brand  price  POS_exposed w-1  \\\n",
+       "0 2016-12-10  2689  SINGLE     395.41  BRAND1   1.16              NaN   \n",
+       "1 2016-12-17  2689  SINGLE     395.41  BRAND1   1.15              1.0   \n",
+       "2 2016-12-24  2689  SINGLE     395.41  BRAND1   1.16              1.0   \n",
+       "3 2016-12-31  2689  SINGLE     395.41  BRAND1   1.16              0.0   \n",
+       "4 2017-01-07  2689  SINGLE     395.41  BRAND1   1.16              0.0   \n",
+       "\n",
+       "   volume_on_promo w-1  sales w-1  scope   target  \n",
+       "0                  NaN        NaN      0  24175.0  \n",
+       "1            17.676112    24175.0      0  23521.0  \n",
+       "2            24.482803    23521.0      0  22075.0  \n",
+       "3            19.410646    22075.0      0  16492.0  \n",
+       "4            29.812030    16492.0      0  25971.0  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import seaborn as sns\n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
     "\n",
     "train = pd.read_csv(\"../dataset/original/train.csv\")\n",
-    "test = pd.read_csv(\"../dataset/original/x_test.csv\")"
+    "test = pd.read_csv(\"../dataset/original/x_test.csv\")\n",
+    "\n",
+    "from preprocessing.preprocessing import convert_date \n",
+    "\n",
+    "convert_date(train).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# <b>2. Data Preprocessing</b>\n",
+    "First of all, we have decided how to deal with the NaNs in the train and we have chosen to impute them. <br>\n",
+    "Moreover, we have found useful to convert the values of **_sales w-1_** and **_target_** to the logarithm to smooth the predictions ... (?)  \n",
+    "Furthermore, we have attached to the whole dataframe the column **_real_target_** with the target that we have to predict for that specific week.\n",
+    "\n",
+    "## _TODO: aggiungere qualcos'altro_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>sku</th>\n",
+       "      <th>pack</th>\n",
+       "      <th>size (GM)</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>price</th>\n",
+       "      <th>POS_exposed w-1</th>\n",
+       "      <th>volume_on_promo w-1</th>\n",
+       "      <th>sales w-1</th>\n",
+       "      <th>scope</th>\n",
+       "      <th>target</th>\n",
+       "      <th>real_target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-06-29</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.249144</td>\n",
+       "      <td>9.571017</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.694555</td>\n",
+       "      <td>16228.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-07-06</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.694555</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.804496</td>\n",
+       "      <td>18114.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-07-13</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.804496</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.838896</td>\n",
+       "      <td>18748.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-07-20</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32.730496</td>\n",
+       "      <td>9.838896</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.788862</td>\n",
+       "      <td>17833.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-07-27</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.069635</td>\n",
+       "      <td>9.788862</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.747185</td>\n",
+       "      <td>17105.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date  sku  pack  size (GM)  brand  price  POS_exposed w-1  \\\n",
+       "0 2019-06-29  144     0     114.23      1   3.20              0.0   \n",
+       "1 2019-07-06  144     0     114.23      1   3.22              0.0   \n",
+       "2 2019-07-13  144     0     114.23      1   3.02              0.0   \n",
+       "3 2019-07-20  144     0     114.23      1   3.25              0.0   \n",
+       "4 2019-07-27  144     0     114.23      1   2.99              0.0   \n",
+       "\n",
+       "   volume_on_promo w-1  sales w-1  scope    target  real_target  \n",
+       "0             1.249144   9.571017      1  9.694555      16228.0  \n",
+       "1             0.000000   9.694555      1  9.804496      18114.0  \n",
+       "2             0.000000   9.804496      1  9.838896      18748.0  \n",
+       "3            32.730496   9.838896      1  9.788862      17833.0  \n",
+       "4             0.069635   9.788862      1  9.747185      17105.0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def convert_date(df):\n",
-    "    df['Unnamed: 0'] = df['Unnamed: 0'].str.split(\" \")\n",
-    "    df['Unnamed: 0'] = df['Unnamed: 0'].apply(lambda x: \"-\".join(x[1:]))\n",
-    "    df = df.rename(columns={'Unnamed: 0':'Date'})\n",
-    "    df.Date = pd.to_datetime(df.Date)\n",
-    "    return df"
+    "from preprocessing.preprocessing import preprocessing\n",
+    "df = preprocessing(train, test)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# <b>3. Baseline</b>\n",
+    "Our baseline model is a very simple model, lacking of every feature and immediately computed to better understand the richness of the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([train, test],sort=False)\n",
-    "df = convert_date(df)\n",
-    "df = df.sort_values(['sku','Date'])\n",
+    "# Baseline model here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# <b>4. In Depth Analysis</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exploring the dataset, we have carried out some analysis concerning different topics:\n",
     "\n",
-    "train = df[~df.target.isna()]\n",
-    "test = df[df.target.isna()]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Baseline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. <b>Cluster Analysis</b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this section we show\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Hierarchical Clustering for timeseries\n",
-    "\n",
-    "- Correlation Heatmap for clustering\n"
+    "#### **1. _Trend and seasonality:_** to understand the shape of different time series and their stationarity;\n",
+    "#### **2. _Autocorrelation:_** to see if each time series is dependent from the past;\n",
+    "#### **3. _Features Correlation:_** to discover some correlations between attributes in the dataset;\n",
+    "#### **4. _Clusters Analysis:_** to group some time series which have a common behaviour."
    ]
   },
   {
@@ -122,6 +425,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.concat([train, test],sort=False)\n",
+    "df = convert_date(df)\n",
+    "df = df.sort_values(['sku','Date'])\n",
+    "\n",
+    "train = df[~df.target.isna()]\n",
+    "test = df[df.target.isna()]\n",
+    "\n",
     "from scipy.spatial.distance import cdist, pdist\n",
     "from scipy.cluster.hierarchy import dendrogram, linkage, fcluster\n",
     "from scipy import stats\n"
